WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
322919
REGRESSION(
320030@main
): [WPE] ENABLE_WPE_LEGACY_API=0 can't build due to undefined reference to `WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent(WebKit::WebKeyboardEventInit&&)'
https://bugs.webkit.org/show_bug.cgi?id=322919
Summary
REGRESSION(320030@main): [WPE] ENABLE_WPE_LEGACY_API=0 can't build due to und...
Fujii Hironori
Reported
2026-08-29 20:55:35 PDT
./Tools/Scripts/build-webkit --wpe --release --cmakeargs=-DENABLE_WPE_LEGACY_API=0 : && /sdk/webkit/Tools/Scripts/swift/swiftc-wrapper.py -j 64 -num-threads 64 -emit-library -O -L/jhbuild/install/lib -Xlinker --no-undefined -Xlinker --gc-sections -Xlinker --disable-new-dtags --original-swift-compiler=/opt/swift/usr/bin/swiftc @/sdk/webkit/WebKitBuild/WPE/Release/Source/WebKit/CMakeFiles/WebKit_SwiftInterop.dir/Release/objects.rsp -Xlinker -soname -Xlinker libWPEWebKit-2.0.so.1 -o lib/libWPEWebKit-2.0.so.1.12.0 @CMakeFiles/WebKit.rsp && : error: link command failed with exit code 1 (use -v to see invocation) /usr/bin/x86_64-linux-gnu-ld.bfd: Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-Shared-25.cpp.o: in function `WebKit::NativeWebKeyboardEvent::create(_WPEEvent*, WTF::String const&, bool)': UnifiedSource-Shared-25.cpp:(.text._ZN6WebKit22NativeWebKeyboardEvent6createEP9_WPEEventRKN3WTF6StringEb+0x4b): undefined reference to `WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent(WebKit::WebKeyboardEventInit&&)' /usr/bin/x86_64-linux-gnu-ld.bfd: Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-Shared-25.cpp.o: in function `WebKit::NativeWebKeyboardEvent::create(WTF::String const&, std::optional<WTF::Vector<WebCore::CompositionUnderline, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> >&&, std::optional<WebKit::EditingRange>&&)': UnifiedSource-Shared-25.cpp:(.text.unlikely._ZN6WebKit22NativeWebKeyboardEvent6createERKN3WTF6StringEOSt8optionalINS1_6VectorIN7WebCore20CompositionUnderlineELm0ENS1_15CrashOnOverflowELm16ENS1_10FastMallocEEEEOS5_INS_12EditingRangeEE+0x163): undefined reference to `WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent(WebKit::WebKeyboardEventInit&&)' /usr/bin/x86_64-linux-gnu-ld.bfd: Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-Shared-25.cpp.o: in function `WebKit::NativeWebMouseEvent::create(_WPEEvent*)': UnifiedSource-Shared-25.cpp:(.text.unlikely._ZN6WebKit19NativeWebMouseEvent6createEP9_WPEEvent+0x3e): undefined reference to `WebKit::NativeWebMouseEvent::NativeWebMouseEvent(WebKit::WebMouseEventInit&&)' /usr/bin/x86_64-linux-gnu-ld.bfd: Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-Shared-26.cpp.o: in function `WebKit::NativeWebWheelEvent::create(_WPEEvent*)': UnifiedSource-Shared-26.cpp:(.text._ZN6WebKit19NativeWebWheelEvent6createEP9_WPEEvent+0x4b): undefined reference to `WebKit::NativeWebWheelEvent::NativeWebWheelEvent(WebKit::WebWheelEventInit&&)' /usr/bin/x86_64-linux-gnu-ld.bfd: Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-Shared-26.cpp.o: in function `WebKit::NativeWebWheelEvent::create(_WPEEvent*, WebKit::WebEventPhase)': UnifiedSource-Shared-26.cpp:(.text._ZN6WebKit19NativeWebWheelEvent6createEP9_WPEEventNS_13WebEventPhaseE+0x41): undefined reference to `WebKit::NativeWebWheelEvent::NativeWebWheelEvent(WebKit::WebWheelEventInit&&)' clang: error: linker command failed with exit code 1 (use -v to see invocation) [11912/12037] Linking CXX executable bin/TestWebKitAPI/TestWebCore
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-08-29 21:12:07 PDT
PR:
https://github.com/WebKit/WebKit/pull/72790
EWS
Comment 2
2026-08-30 16:16:44 PDT
Committed
320123@main
(e6b841d2ce6b): <
https://commits.webkit.org/320123@main
> Reviewed commits have been landed. Closing PR #72790 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug