REGRESSION(320030@main): [WPE] ENABLE_WPE_LEGACY_API=0 can't build due to undefined reference to `WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent(WebKit::WebKeyboardEventInit&&)' https://bugs.webkit.org/show_bug.cgi?id=322919

Reviewed by Adrian Perez de Castro.

build-webkit --wpe --cmakeargs=-DENABLE_WPE_LEGACY_API=0 couldn't link libWPEWebKit-2.0.so:

> undefined reference to `WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent(WebKit::WebKeyboardEventInit&&)'
> undefined reference to `WebKit::NativeWebMouseEvent::NativeWebMouseEvent(WebKit::WebMouseEventInit&&)'
> undefined reference to `WebKit::NativeWebWheelEvent::NativeWebWheelEvent(WebKit::WebWheelEventInit&&)'

Moved the ctors from libwpe/*.cpp to *.h to share them between legacy libwpe
code path and modern wpe platform code path.

* Source/WebKit/Shared/NativeWebKeyboardEvent.h:
(WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent):
* Source/WebKit/Shared/NativeWebMouseEvent.h:
(WebKit::NativeWebMouseEvent::NativeWebMouseEvent):
* Source/WebKit/Shared/NativeWebWheelEvent.h:
(WebKit::NativeWebWheelEvent::NativeWebWheelEvent):
* Source/WebKit/Shared/libwpe/NativeWebKeyboardEventLibWPE.cpp:
(WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent): Deleted.
* Source/WebKit/Shared/libwpe/NativeWebMouseEventLibWPE.cpp:
(WebKit::NativeWebMouseEvent::NativeWebMouseEvent): Deleted.
* Source/WebKit/Shared/libwpe/NativeWebWheelEventLibWPE.cpp:
(WebKit::NativeWebWheelEvent::NativeWebWheelEvent): Deleted.

Canonical link: https://commits.webkit.org/320123@main